--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-auth": "5.0.0-beta.19",
     "react": "^18",
     "react-dom": "^18",
+    "stripe": "^16.1.0",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
