--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.15.1",
     "@upstash/ratelimit": "^1.2.1",
     "@upstash/redis": "^1.31.6",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
@@ -20,7 +21,8 @@
     "react": "^18",
     "react-dom": "^18",
     "stripe": "^16.1.0",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
