--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
     "next-auth": "5.0.0-beta.19",
+    "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
     "stripe": "^16.1.0",
