--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,41 @@
-version: '3.1'
+# Copyright Broadcom, Inc. All Rights Reserved.
+# SPDX-License-Identifier: APACHE-2.0
+
+version: '2'
 
 services:
-  mongodb:
-    restart: always
-    container_name: saas_boilerplate
-    image: mongo:7.0
-
+  mongodb-primary:
+    image: docker.io/bitnami/mongodb:7.0
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=cmglezpdev
-      - MONGO_INITDB_ROOT_PASSWORD=sq8hivPz6gbNzwz8
-      - MONGO_INITDB_DATABASE=boilerplate
-    
-    ports:
-      - '27017:27017'
-    
+      - MONGODB_ADVERTISED_HOSTNAME=mongodb-primary
+      - MONGODB_REPLICA_SET_MODE=primary
+      - MONGODB_ROOT_PASSWORD=password123
+      - MONGODB_REPLICA_SET_KEY=replicasetkey123
+    volumes:
+      - 'mongodb_master_data:/bitnami/mongodb'
+
+  mongodb-secondary:
+    image: docker.io/bitnami/mongodb:7.0
+    depends_on:
+      - mongodb-primary
+    environment:
+      - MONGODB_ADVERTISED_HOSTNAME=mongodb-secondary
+      - MONGODB_REPLICA_SET_MODE=secondary
+      - MONGODB_INITIAL_PRIMARY_HOST=mongodb-primary
+      - MONGODB_INITIAL_PRIMARY_ROOT_PASSWORD=password123
+      - MONGODB_REPLICA_SET_KEY=replicasetkey123
+
+  mongodb-arbiter:
+    image: docker.io/bitnami/mongodb:7.0
+    depends_on:
+      - mongodb-primary
+    environment:
+      - MONGODB_ADVERTISED_HOSTNAME=mongodb-arbiter
+      - MONGODB_REPLICA_SET_MODE=arbiter
+      - MONGODB_INITIAL_PRIMARY_HOST=mongodb-primary
+      - MONGODB_INITIAL_PRIMARY_ROOT_PASSWORD=password123
+      - MONGODB_REPLICA_SET_KEY=replicasetkey123
 
 volumes:
-  saas_mongodb:
+  mongodb_master_data:
+    driver: local
