--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "stripe:listen": "stripe listen --forward-to localhost:3000/api/webhook/stripe",
+    "stripe:trigger": "stripe trigger payment_intent.succeeded",
     "lint": "next lint"
   },
   "dependencies": {
