--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,8 @@
   "extends": [
     "next/core-web-vitals",
     "./node_modules/standard/eslintrc.json"
-  ]
+  ],
+  "rules": {
+    "space-before-function-paren": "off"
+  }
 }
