--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "stripe:listen": "stripe listen --forward-to localhost:3000/api/webhook/stripe",
     "stripe:trigger": "stripe trigger payment_intent.succeeded",
+    "email:dev": "email dev",
     "lint": "next lint"
   },
   "dependencies": {
@@ -25,6 +26,7 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@react-email/components": "0.0.23",
     "@upstash/ratelimit": "^1.2.1",
     "@upstash/redis": "^1.31.6",
     "class-variance-authority": "^0.7.0",
@@ -49,6 +51,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
+    "react-email": "3.0.1",
     "standard": "^17.1.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
