--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongoose": "^8.5.2",
     "next": "14.2.4",
     "next-auth": "5.0.0-beta.19",
+    "next-themes": "^0.3.0",
     "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
