chore()[]: add drizzle ORM + postgres

--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "stripe:listen": "stripe listen --forward-to localhost:3000/api/webhook/stripe",
     "stripe:trigger": "stripe trigger payment_intent.succeeded",
     "email:dev": "email dev",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/mongodb-adapter": "^3.4.2",
+    "@auth/drizzle-adapter": "^1.4.2",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -31,18 +33,19 @@
     "@upstash/redis": "^1.31.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.33.0",
     "lucide-react": "^0.396.0",
-    "mongodb": "^6.8.0",
-    "mongoose": "^8.5.2",
     "next": "14.2.4",
     "next-auth": "5.0.0-beta.19",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.14",
+    "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
     "stripe": "^16.1.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -50,6 +53,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "daisyui": "^4.12.7",
+    "drizzle-kit": "^0.24.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
