chore()[]: add drizzle studio command

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "email:dev": "email dev",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio",
     "lint": "next lint"
   },
   "dependencies": {
