--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
     "next-auth": "5.0.0-beta.19",
+    "next-safe-action": "^7.9.0",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.14",
     "postgres": "^3.4.4",
