chore(): add rect-table tanstack

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-email/components": "0.0.23",
+    "@tanstack/react-table": "^8.20.5",
     "@upstash/ratelimit": "^1.2.1",
     "@upstash/redis": "^1.31.6",
     "class-variance-authority": "^0.7.0",
